--- a/templates/redirect_info.html
+++ b/templates/redirect_info.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <h2>
-  info for <a href='{{url.shortened}}'>{{url.shortened}}</a>
+  info for <a href='{{url.shortened}}' target='_blank'>{{url.shortened}}</a>
 </h2>
 {% if not rs.items %}
 <p>
